<resources>
    <string name="app_name">Android Application Dev</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="app_slogan">The best Tutor for U.</string>
    <string name="website">www.tutoru.com</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">TutorU</string>
    <string name="logo_description">Logo of App</string>

    <string name="place_holder">The Main Activity goes here.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Enter your Email</string>
    <string name="prompt_password">Enter your Password</string>
    <string name="action_log_in">Login to your Account</string>
    <string name="action_log_in_short">Log in</string>
    <string name="action_sign_in">Sign up or Register</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_account_sign_up">Don\'t have an Account? Sign Up.</string>
    <string name="add_topic">Adds a new Topic</string>

    <string name="hint_topic">Topic…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Topic not saved because it is empty.</string>
    <string name="topic_header">Your Topics</string>

    <string name="nav_home">HOME</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>